fixed alignment issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1298,7 +1298,7 @@
 		background-image: url("../../images/shootingstar.jpg");
 		background-size: cover;
 		background-attachment: fixed;
-		background-position: 50% 50%;
+		background-position: center;
 		text-align: center;
 		position: relative;
 		cursor: default;
